--- a/index.html
+++ b/index.html
@@ -1331,16 +1331,20 @@
           <div class="col-12">
             <h3>Software Engineer</h3>
             <h4>Ridmik Labs Limited, Dhaka, Bangladesh <br>  November 1, 2018 - Present</h4>
+            <p>&nbsp;</p>
           </div>
 
           <div class="col-12">
+            <p>The projects I have worked in Ridmik Labs Limited: </p>
+
             <h4>Boitoi Android Application</h4>
 
-            <p>Boitoi is a secure native android eBook reader with digital library.</p>
+            <p>Boitoi is a secure native android eBook reader with digital library. It is currently the most popular eBook reader in Bangladesh which has around 300k users.</p>
 
             <ul>
-              <li>Worked in the complete development lifecycle of the application with successful launching and is working on continuous updating.</li>
-              <li>Researched and worked on the security(standard encryption and decryption) of the books stored in the device of an user.</li>
+              <li>Worked in the complete development lifecycle of the application with successful launching</li>
+              <li>Researched and worked on the security(standard encryption and decryption) of the books stored in the device of an user</li>
+              <li>Working in the continuous development of the application</li>
             </ul>
 
             <h4>Get Boitoi on <a href = "https://play.google.com/store/apps/details?id=ridmik.boitoi" target="_blank" rel="noopener">Google Play</a></span></h4>
@@ -1354,11 +1358,40 @@
             <p>Boitoi is a secure native iOS eBook reader with digital library.</p>
 
             <ul>
-              <li>Worked in the complete development lifecycle of the application with successful launching and is working on continuous updating.</li>
-              <li>Researched and worked on the security(standard encryption and decryption) of the books stored in the device of an user.</li>
+              <li>Worked in the complete development lifecycle of the application with successful launching</li>
+              <li>Researched and worked on the security(standard encryption and decryption) of the books stored in the device of an user</li>
             </ul>
 
             <h4>Get Boitoi on <a href = "https://apps.apple.com/us/app/boitoi-bangla-ebook-reader/id1505698833" target="_blank" rel="noopener">App Store</a></span></h4>
+
+            <p>&nbsp;</p>
+
+          </div>
+
+          <div class="col-12">
+            <h4>Ridmik Keyboard Android</h4>
+
+            <p>Ridmik Keyboard is the most popular keyboard in Bangladesh with Bangla phonetic keyboard which has around 20 million users.</p>
+
+            <ul>
+              <li>Working on the continuous development of Ridmik Keyboard</li>
+            </ul>
+
+            <h4>Get Ridmik Keyboard on <a href = "https://play.google.com/store/apps/details?id=ridmik.keyboard&hl" target="_blank" rel="noopener">Google Play</a></span></h4>
+
+            <p>&nbsp;</p>
+
+          </div>
+
+          <div class="col-12">
+            <h4>Bangla Article Summarizer</h4>
+
+            <p>It is a project which gives the extractive summary of a Bangla article.</p>
+
+            <ul>
+              <li>Researched on how to make a Bangla article summarizer like other languages</li>
+              <li>Worked on preparing Bangla article summarizer based on TF-IDF(Term Frequency and Inverse Document Frequency) and K-means clustering algorithm</li>
+            </ul>
 
             <p>&nbsp;</p>
 
