--- a/index.html
+++ b/index.html
@@ -1303,8 +1303,6 @@
               persons who are in supervision of monitoring will get the work of them easier and more convenient than finding the object from lots of videos
               manually by using this automated system.</p>
 
-            <h4> <a href = "https://github.com/aminul7506/Multivariate-Stock-Price-Prediction" target="_blank" rel="noopener">Github Code</a></span></h4>
-
             <p>&nbsp;</p>
           </div>
 
@@ -1390,7 +1388,7 @@
 
             <ul>
               <li>Researched on how to make a Bangla article summarizer like other languages</li>
-              <li>Worked on preparing Bangla article summarizer based on TF-IDF(Term Frequency and Inverse Document Frequency) and K-means clustering algorithm</li>
+              <li>Worked on preparing Bangla article summarizer based on TF-IDF(Term Frequency and Inverse Document Frequency) and K-means clustering algorithm using NLTK in python</li>
             </ul>
 
             <p>&nbsp;</p>
