--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
 
-  <meta name="description" content="Software Engineer, Ridmik Labs Limited, Dhaka, Bangladesh">
+  <meta name="description" content="Software Engineer, Ridmik Labs, Dhaka, Bangladesh">
 
 
   <link rel="alternate" hreflang="en-us" href="/">
@@ -687,7 +687,7 @@
 
         <h3>
 
-          <span>Ridmik Labs Limited, Dhaka, Bangladesh</span>
+          <span>Ridmik Labs, Dhaka, Bangladesh</span>
 
         </h3>
 
@@ -757,7 +757,7 @@
 
     <h1>Biography</h1>
 
-    <p>I am currently working as a software engineer at Ridmik Labs Limited, Dhaka, Bangladesh. I have completed my B.Sc in Computer Science and Engineering
+    <p>I am currently working as a software engineer at Ridmik Labs, Dhaka, Bangladesh. I have completed my B.Sc in Computer Science and Engineering
       from <a href="https://www.buet.ac.bd">Bangladesh University of Engineering and Technology</a>.
       My undergraduate thesis supervisor was
       <a href="https://cse.buet.ac.bd/faculty_list/detail/mmislam">Dr. Md. Monirul Islam </a>with whom I have worked on the topic
@@ -1328,12 +1328,12 @@
 
           <div class="col-12">
             <h3>Software Engineer</h3>
-            <h4>Ridmik Labs Limited, Dhaka, Bangladesh <br>  November 1, 2018 - Present</h4>
+            <h4>Ridmik Labs, Dhaka, Bangladesh <br>  November 1, 2018 - Present</h4>
             <p>&nbsp;</p>
           </div>
 
           <div class="col-12">
-            <p>The projects I have worked in Ridmik Labs Limited: </p>
+            <p>The projects I have worked in Ridmik Labs: </p>
 
             <h4>Boitoi Android Application</h4>
 
