--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@
           </div>
 
           <div class="col-12">
-            <p>The projects I have worked in Ridmik Labs: </p>
+            <p>The projects I have worked in Ridmik Labs : </p>
 
             <h4>Boitoi Android Application</h4>
 
@@ -1341,7 +1341,7 @@
 
             <ul>
               <li>Worked in the complete development lifecycle of the application with successful launching</li>
-              <li>Researched and worked on the security(standard encryption and decryption) of the books stored in the device of an user</li>
+              <li>Researched on the security(standard encryption and decryption) of the books in the app stored in the device of an user</li>
               <li>Working in the continuous development of the application</li>
             </ul>
 
@@ -1357,7 +1357,7 @@
 
             <ul>
               <li>Worked in the complete development lifecycle of the application with successful launching</li>
-              <li>Researched and worked on the security(standard encryption and decryption) of the books stored in the device of an user</li>
+              <li>Researched on the security(standard encryption and decryption) of the books in the app stored in the device of an user</li>
             </ul>
 
             <h4>Get Boitoi on <a href = "https://apps.apple.com/us/app/boitoi-bangla-ebook-reader/id1505698833" target="_blank" rel="noopener">App Store</a></span></h4>
@@ -1387,8 +1387,9 @@
             <p>It is a project which gives the extractive summary of a Bangla article.</p>
 
             <ul>
-              <li>Researched on how to make a Bangla article summarizer like other languages</li>
-              <li>Worked on preparing Bangla article summarizer based on TF-IDF(Term Frequency and Inverse Document Frequency) and K-means clustering algorithm using NLTK in python</li>
+              <li>Researched on making a Bangla article summarizer like other languages</li>
+              <li>Worked on preparing Bangla article summarizer based on TF-IDF(Term Frequency and Inverse Document Frequency), K-means clustering algorithm and
+                NLTK(Natural Language Toolkit) in python</li>
             </ul>
 
             <p>&nbsp;</p>
