--- a/index.html
+++ b/index.html
@@ -1294,14 +1294,16 @@
 
             <img src="/images/thesis_image.png" alt="Flowchart of total system" style='float: left; height: 600px; margin-right: 20px; margin-top: 10px;'>
 
-            <p>Scene reconstruction from multiple CCTV cameras has a great impact on visual surveillance system, representing crime scene, and many other cases of
-              observation. There are some works on scene reconstruction but actually a little work on scene reconstruction from multiple CCTV cameras.
-              As visual surveillance systems collect a huge amount of data from many different scenes or surveillance cameras, people expect the total
-              activities of an object with little human labeling effort as possible. We propose an automated system that can analyze videos sent
-              from multiple cameras simultaneously, and present the information of an object to user in convenient and easy understandable form. Moreover,
-              if there is no camera at a place, we propose an algorithm to predict an object’s movement in that place using his past behaviours. The
-              persons who are in supervision of monitoring will get the work of them easier and more convenient than finding the object from lots of videos
-              manually by using this automated system.</p>
+            <p>We have proposed a system that can present information of a human or an object to a user or visual inspector by analyzing videos taken from multiple
+              static CCTV cameras from area of interests. For this, we need to recognize the input object in different video files taken from CCTV cameras. For
+              recognizing the input object from frame to frame in video files, we have used speeded up robust features(SURF). The recognized object in a frame has been
+              used as a new input for recognizing the input object in next video frame so that the input object can be detected more accurately using SURF as object shape
+              or orientation can be changed over time. If there is a place in the area of interests where camera is defective or unavailable, we have developed a
+              prediction algorithm for predicting the movement of the input object in that specific place using the objects previous or next velocities in different
+              cameras. For determining the average velocity of the input object in a camera, we have considered the total changes of pixels over time and then converted
+              the pixel distance to actual meter distance. As meter distance between two pixels is not constant in relative to the center of the camera, we have
+              build a four degree polynomial approximation to determine meter distance from pixel distance. We have used the average velocities of the input object from different
+              cameras to predict the movement of the object in the place of missing or defective camera on given the background information of that place.</p>
 
             <p>&nbsp;</p>
           </div>
