--- a/index.html
+++ b/index.html
@@ -1294,16 +1294,17 @@
 
             <img src="/images/thesis_image.png" alt="Flowchart of total system" style='float: left; height: 600px; margin-right: 20px; margin-top: 10px;'>
 
-            <p>We have proposed a system that can present information of a human or an object to a user or visual inspector by analyzing videos taken from multiple
-              static CCTV cameras from area of interests. For this, we need to recognize the input object in different video files taken from CCTV cameras. For
-              recognizing the input object from frame to frame in video files, we have used speeded up robust features(SURF). The recognized object in a frame has been
-              used as a new input for recognizing the input object in next video frame so that the input object can be detected more accurately using SURF as object shape
-              or orientation can be changed over time. If there is a place in the area of interests where camera is defective or unavailable, we have developed a
-              prediction algorithm for predicting the movement of the input object in that specific place using the objects previous or next velocities in different
-              cameras. For determining the average velocity of the input object in a camera, we have considered the total changes of pixels over time and then converted
-              the pixel distance to actual meter distance. As meter distance between two pixels is not constant in relative to the center of the camera, we have
-              build a four degree polynomial approximation to determine meter distance from pixel distance. We have used the average velocities of the input object from different
-              cameras to predict the movement of the object in the place of missing or defective camera on given the background information of that place.</p>
+            <p>In this paper, we have proposed a system that can present information of a human or an object to a user or visual inspector by analyzing
+              videos taken from multiple static CCTV cameras from area of interests. It can reduce manual effort of visual inspector on visual surveillance
+              system. For implementing the system, we need to recognize the input object in different video files taken from CCTV cameras. For recognizing the input
+              object from frame to frame in video files, we have used speeded up robust features(SURF). The recognized object in a frame has been used as a new input
+              for recognizing the input object in next video frame so that the input object can be detected more accurately using SURF as object shape or orientation can
+              be changed over time. If there is a place in the area of interests where camera is defective or unavailable, we have developed a prediction algorithm for
+              predicting the movement of the input object in that specific place using the objects previous or next velocities in different cameras. For determining the
+              average velocity of the input object in a camera, we have considered the total changes of pixels over time and then converted the pixel distance to actual
+              meter distance. As meter distance between two pixels is not constant in relative to the center of the camera, we have build a four degree polynomial
+              approximation to determine meter distance from pixel distance. We have used the average velocities of the input object from different cameras to predict
+              the movement of the object in the place of missing or defective camera on given the background information of that place.</p>
 
             <p>&nbsp;</p>
           </div>
