--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,7 @@
 
             <img src="/images/thesis_image.png" alt="Flowchart of total system" style='float: left; height: 600px; margin-right: 20px; margin-top: 10px;'>
 
-            <p>In this paper, we have proposed a system that can present information of a human or an object to a user or visual inspector by analyzing
+            <p>We have proposed a system that can present information of a human or an object to a user or visual inspector by analyzing
               videos taken from multiple static CCTV cameras from area of interests. It can reduce manual effort of visual inspector on visual surveillance
               system. For implementing the system, we need to recognize the input object in different video files taken from CCTV cameras. For recognizing the input
               object from frame to frame in video files, we have used speeded up robust features(SURF). The recognized object in a frame has been used as a new input
