--- a/index.html
+++ b/index.html
@@ -1303,7 +1303,7 @@
               predicting the movement of the input object in that specific place using the objects previous or next velocities in different cameras. For determining the
               average velocity of the input object in a camera, we have considered the total changes of pixels over time and then converted the pixel distance to actual
               meter distance. As meter distance between two pixels is not constant in relative to the center of the camera, we have build a four degree polynomial
-              approximation to determine meter distance from pixel distance. We have used the average velocities of the input object from different cameras to predict
+              approximation to determine meter distance from pixel distance. We have used these average velocities of the input object from different cameras to predict
               the movement of the object in the place of missing or defective camera on given the background information of that place.</p>
 
             <p>&nbsp;</p>
