:up: update website

--- a/index.html
+++ b/index.html
@@ -1290,7 +1290,7 @@
 
             <h4>Collaborator: <a href="https://www.linkedin.com/in/anwar-hossain-zahid-a46195108/">Anwar Hossain</a></h4>
 
-            <h4>Keywords: Scene Reconstruction, Missing Scene Construction, Video Processing, Object Monitoring, Object Tracking, Surveillance System</h4>
+            <p>Keywords: Scene Reconstruction, Missing Scene Construction, Video Processing, Object Monitoring, Object Tracking, Surveillance System</p>
 
             <img src="/images/thesis_image.png" alt="Flowchart of total system" style='float: left; height: 600px; margin-right: 20px; margin-top: 10px;'>
 
@@ -1305,6 +1305,9 @@
               meter distance. As meter distance between two pixels is not constant in relative to the center of the camera, we have build a four degree polynomial
               approximation to determine meter distance from pixel distance. We have used these average velocities of the input object from different cameras to predict
               the movement of the object in the place of missing or defective camera on given the background information of that place.</p>
+
+            <h4>Status: Manuscript in Preparation</h4>
+            <h4><a href="/files/UndergradThesisBook.pdf">Thesis Book</a></h4>
 
             <p>&nbsp;</p>
           </div>
