:up: update website

--- a/index.html
+++ b/index.html
@@ -1307,7 +1307,7 @@
               the movement of the object in the place of missing or defective camera on given the background information of that place.</p>
 
             <h4>Status: Manuscript in Preparation</h4>
-            <h4><a href="/files/UndergradThesisBook.pdf">Thesis Book</a></h4>
+            <h4><a href="/files/Scene Reconstruction from Multiple Static CCTV Cameras.pdf">Thesis book is available</a></h4>
 
             <p>&nbsp;</p>
           </div>
