:up: update website

--- a/index.html
+++ b/index.html
@@ -456,6 +456,10 @@
 
 
         <li class="nav-item">
+          <a class="nav-link " href="/#skills" data-target="#skills"><span>Skills</span></a>
+        </li>
+
+        <li class="nav-item">
           <a class="nav-link " href="/#resume" data-target="#resume"><span>Resume</span></a>
         </li>
 
@@ -1444,27 +1448,28 @@
 
             <h4>User side functionality</h4>
             <ul>
-              <li>User can report a crime from the app to one's nearby police station.</li>
-              <li>User can see the verified crimes in an area.</li>
+              <li>User can report a crime from the app to one's nearby police station</li>
+              <li>User can see the verified crimes in an area</li>
               <li>User can see the nearby police station based on his current location and can call or message to the police station
-                immediately in case of an emergency or danger.</li>
-              <li>If user is now in a crime or danger area, user will get a notification.</li>
-              <li>User can see crime statistics and verified crimes in one's area.</li>
-              <li>User can see nearby friends' location in map and can call or message them.</li>
+                immediately in case of an emergency or danger</li>
+              <li>If user is now in a crime or danger area, user will get a notification</li>
+              <li>User can see crime statistics and verified crimes in one's area</li>
+              <li>User can see nearby friends' location in map and can call or message them</li>
             </ul>
 
 
             <h4>Admin or police side functionality</h4>
             <ul>
               <li>Police can log into his/her station.</li>
-              <li>Police can see the reported crimes in his area and can verify it.</li>
-              <li>Police can call or send message to a user who has reported a crime.</li>
-              <li>Police can see crimes statistics in his/her area.</li>
+              <li>Police can see the reported crimes in his area and can verify it</li>
+              <li>Police can call or send message to a user who has reported a crime</li>
+              <li>Police can see crimes statistics in his/her area</li>
+              <li>Police can set a area as crime or danger prone</li>
             </ul>
 
             </p>
 
-            <h4><a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Github Code</a></span></h4>
+            <h4><a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Github Code and More Details</a></span></h4>
 
             <p>&nbsp;</p>
           </div>
@@ -1689,7 +1694,6 @@
 
             <p>It is a simple calculator app than can perform basic operations</p>
 
-            <p>&nbsp;</p>
           </div>
 
 
@@ -1714,6 +1718,40 @@
     </section>
 
 
+    <section id="skills" class="home-section wg-pages   "  >
+      <div class="container">
+
+
+        <div class="row ">
+
+
+          <div class="col-12 col-lg-4 section-heading">
+            <h1>Skills</h1>
+
+
+            <div class="col-12">
+              <p>
+                <strong> Programming Languages : </strong>Java, Python, C, C++, MATLAB <br/>
+                <strong> Scripting Languages : </strong>JavaScript, HTML, CSS, MATLAB <br/>
+                <strong> Mobile Application Development : </strong>Android, iOS <br/>
+                <strong> Database : </strong>Oracle, SQL <br/>
+                <strong> Tools & Others : </strong>Keras, Tensorflow, NLTK, Google Map API, Google Vision API, Firebase,JNI(Java Native Interface), JavaFX <br/>
+              </p>
+            </div>
+
+
+          </div>
+
+
+          <div class="col-12 col-lg-8">
+
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+
 
       <section id="resume" class="home-section wg-pages   "  >
         <div class="container">
@@ -1724,6 +1762,12 @@
 
           <div class="col-12 col-lg-4 section-heading">
             <h1>Resume</h1>
+
+
+            <div class="col-12">
+              <h3>Click Here to Download</h3>
+            </div>
+
 
           </div>
 
