:up: update website

--- a/index.html
+++ b/index.html
@@ -1692,7 +1692,7 @@
 
             <h4>Tools : Android Studio</h4>
 
-            <p>It is a simple calculator app than can perform basic operations</p>
+            <p>It is a simple calculator app than can perform basic operations.</p>
 
           </div>
 
@@ -1732,7 +1732,7 @@
 
           <div class="col-12">
             <p>
-              <strong> Programming Languages : </strong>Java, Python, C, C++, MATLAB <br/>
+              <strong> Programming Languages : </strong>Java, Swift, Python, C, C++, Kotlin, Objective-C, Assembly(80X86)<br/>
               <strong> Scripting Languages : </strong>JavaScript, HTML, CSS, MATLAB <br/>
               <strong> Mobile Application Development : </strong>Android, iOS <br/>
               <strong> Database : </strong>Oracle, SQL <br/>
