:up: update website

--- a/index.html
+++ b/index.html
@@ -366,6 +366,8 @@
               <li>Working in the continuous development of the application</li>
             </ul>
 
+            <h4>Tools & Languages I have used: Android Studio, Java, Kotlin, Java Native Interface, C, JavaScript, HTML, CSS, SQL</h4>
+
             <h4>Get Boitoi on <a href = "https://play.google.com/store/apps/details?id=ridmik.boitoi" target="_blank" rel="noopener">Google Play</a></span></h4>
 
             <p>&nbsp;</p>
