:up: update website

--- a/index.html
+++ b/index.html
@@ -350,7 +350,6 @@
           <div class="col-12">
             <h3>Software Engineer</h3>
             <h4>Ridmik Labs, Dhaka, Bangladesh <br>  November 1, 2018 - Present</h4>
-            <p>&nbsp;</p>
           </div>
 
           <div class="col-12">
@@ -366,7 +365,7 @@
               <li>Working in the continuous development of the application</li>
             </ul>
 
-            <h4>Tools & Languages I have used: Android Studio, Java, Kotlin, Java Native Interface, C, JavaScript, HTML, CSS, SQL</h4>
+            <strong>Tools & Languages I have used : </strong> Android Studio, Java, Kotlin, Java Native Interface, C, JavaScript, HTML, CSS, SQL
 
             <h4>Get Boitoi on <a href = "https://play.google.com/store/apps/details?id=ridmik.boitoi" target="_blank" rel="noopener">Google Play</a></span></h4>
 
