:up: update website

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
               <li>Working in the continuous development of the application</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong> Android Studio, Java, Kotlin, Java Native Interface, C, JavaScript, HTML, CSS, SQL
+            <strong>Tools & Languages I have used : </strong>Android Studio, Java, Kotlin, Java Native Interface, C, SQL, JavaScript, HTML, CSS
 
             <h4>Get Boitoi on <a href = "https://play.google.com/store/apps/details?id=ridmik.boitoi" target="_blank" rel="noopener">Google Play</a></span></h4>
 
@@ -382,6 +382,8 @@
               <li>Researched on the security(standard encryption and decryption) of the books in the app stored in the device of an user</li>
             </ul>
 
+            <strong>Tools & Languages I have used : </strong>Xcode, Swift, Objective-C, C++, JavaScript, HTML, CSS, GRDB
+
             <h4>Get Boitoi on <a href = "https://apps.apple.com/us/app/boitoi-bangla-ebook-reader/id1505698833" target="_blank" rel="noopener">App Store</a></span></h4>
 
             <p>&nbsp;</p>
@@ -396,6 +398,8 @@
             <ul>
               <li>Working on the continuous development of Ridmik Keyboard</li>
             </ul>
+
+            <strong>Tools & Languages I have used : </strong>Android Studio, Java, Kotlin, C
 
             <h4>Get Ridmik Keyboard on <a href = "https://play.google.com/store/apps/details?id=ridmik.keyboard&hl" target="_blank" rel="noopener">Google Play</a></span></h4>
 
@@ -414,7 +418,7 @@
                 NLTK(Natural Language Toolkit) in python</li>
             </ul>
 
-            <p>&nbsp;</p>
+            <strong>Tools & Languages I have used : </strong>Python, NLTK, Clustering Algorithm
 
           </div>
 
