:up: update website

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
 
       <div class="col-md-5">
-        <h3>Interests</h3>
+        <h3>Research Interests</h3>
         <ul class="ul-interests">
 
           <li>Computer Vision</li>
@@ -301,13 +301,13 @@
           <div class="col-12">
             <h3>Scene Reconstruction From Multiple Static CCTV Cameras</h3>
 
-            <h4>Supervisor: <a href="https://cse.buet.ac.bd/faculty_list/detail/mmislam">Dr. Md. Monirul Islam </a></h4>
+            <h4>Supervisor : <a href="https://cse.buet.ac.bd/faculty_list/detail/mmislam">Dr. Md. Monirul Islam </a></h4>
 
-            <h4>Collaborator: <a href="https://www.linkedin.com/in/anwar-hossain-zahid-a46195108/">Anwar Hossain</a></h4>
+            <h4>Collaborator : <a href="https://www.linkedin.com/in/anwar-hossain-zahid-a46195108/">Anwar Hossain</a></h4>
 
-            <p>Keywords: Scene Reconstruction, Missing Scene Construction, Video Processing, Object Monitoring, Object Tracking, Surveillance System</p>
+            <p><strong>Keywords : </strong> Scene Reconstruction, Missing Scene Construction, Video Processing, Object Monitoring, Object Tracking, Surveillance System</p>
 
-            <img src="/images/thesis_image.png" alt="Flowchart of total system" style='float: left; height: 600px; margin-right: 20px; margin-top: 10px;'>
+            <img  title="Flowchart of the System" src="/images/thesis_image.png" alt="Flowchart of the System" style='float: left; height: 600px; margin-right: 20px; margin-top: 10px;'>
 
             <p>We have proposed a system that can present information of a human or an object to a user or visual inspector by analyzing
               videos taken from multiple static CCTV cameras from area of interests. It can reduce manual effort of visual inspector on visual surveillance
