--- a/index.html
+++ b/index.html
@@ -309,6 +309,11 @@
 
             <img  title="Flowchart of the System" src="/images/thesis_image.png" alt="Flowchart of the System" style='float: left; height: 600px; margin-right: 20px; margin-top: 10px;'>
 
+            <figure>
+              <img src="/images/thesis_image.png" alt="Flowchart of the System" style='float: left; height: 600px; margin-right: 20px; margin-top: 10px;'>
+              <figcaption>Flowchart of the System</figcaption>
+            </figure>
+
             <p>We have proposed a system that can present information of a human or an object to a user or visual inspector by analyzing
               videos taken from multiple static CCTV cameras from area of interests. It can reduce manual effort of visual inspector on visual surveillance
               system. For implementing the system, we need to recognize the input object in different video files taken from CCTV cameras. For recognizing the input
@@ -323,8 +328,6 @@
 
             <h4>Status: Manuscript in Preparation</h4>
             <h4><a href="/files/Scene_Reconstruction_from_Multiple_Static_CCTV_Cameras.pdf">Thesis book is available</a></h4>
-
-            <p>&nbsp;</p>
           </div>
 
         </div>
