:up: update website

--- a/index.html
+++ b/index.html
@@ -307,8 +307,6 @@
 
             <p><strong>Keywords : </strong> Scene Reconstruction, Missing Scene Construction, Video Processing, Object Monitoring, Object Tracking, Surveillance System</p>
 
-            <img  title="Flowchart of the System" src="/images/thesis_image.png" alt="Flowchart of the System" style='float: left; height: 600px; margin-right: 20px; margin-top: 10px;'>
-
             <figure>
               <img src="/images/thesis_image.png" alt="Flowchart of the System" style='float: left; height: 600px; margin-right: 20px; margin-top: 10px;'>
               <figcaption>Flowchart of the System</figcaption>
@@ -317,7 +315,7 @@
             <p>We have proposed a system that can present information of a human or an object to a user or visual inspector by analyzing
               videos taken from multiple static CCTV cameras from area of interests. It can reduce manual effort of visual inspector on visual surveillance
               system. For implementing the system, we need to recognize the input object in different video files taken from CCTV cameras. For recognizing the input
-              object from frame to frame in video files, we have used speeded up robust features(SURF). The recognized object in a frame has been used as a new input
+              object from frame to frame in video files, we have used <strong>Speeded Up Robust Features(SURF)</strong>. The recognized object in a frame has been used as a new input
               for recognizing the input object in next video frame so that the input object can be detected more accurately using SURF as object shape or orientation can
               be changed over time. If there is a place in the area of interests where camera is defective or unavailable, we have developed a prediction algorithm for
               predicting the movement of the input object in that specific place using the objects previous or next velocities in different cameras. For determining the
