:up: update website

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
               videos taken from multiple static CCTV cameras from area of interests. It can reduce manual effort of visual inspector on visual surveillance
               system. For implementing the system, we need to recognize the input object in different video files taken from CCTV cameras. For recognizing the input
               object from frame to frame in video files, we have used <strong>Speeded Up Robust Features(SURF)</strong>. The recognized object in a frame has been used as a new input
-              for recognizing the input object in next video frame so that the input object can be detected more accurately using SURF as object shape or orientation can
+              for recognizing the input object in next video frame so that the input object can be detected more accurately using <strong>SURF</strong> as object shape or orientation can
               be changed over time. If there is a place in the area of interests where camera is defective or unavailable, we have developed a prediction algorithm for
               predicting the movement of the input object in that specific place using the objects previous or next velocities in different cameras. For determining the
               average velocity of the input object in a camera, we have considered the total changes of pixels over time and then converted the pixel distance to actual
@@ -325,7 +325,7 @@
               the movement of the object in the place of missing or defective camera on given the background information of that place.</p>
 
             <h4>Status: Manuscript in Preparation</h4>
-            <h4><a href="/files/Scene_Reconstruction_from_Multiple_Static_CCTV_Cameras.pdf">Thesis book is available</a></h4>
+            <h4>Thesis book is available <a href="/files/Scene_Reconstruction_from_Multiple_Static_CCTV_Cameras.pdf">HERE</a></h4>
           </div>
 
         </div>
