--- a/index.html
+++ b/index.html
@@ -350,20 +350,21 @@
             <h4>Ridmik Labs, Dhaka, Bangladesh <br>  November 1, 2018 - Present</h4>
           </div>
 
+          <p>Projects I have worked in Ridmik Labs : </p>
+
           <div class="col-12">
-            <p>The projects I have worked in Ridmik Labs : </p>
 
             <h4>Boitoi Android Application</h4>
 
             <p>Boitoi is a secure native android eBook reader with digital library. It is currently the most popular eBook reader in Bangladesh which has around 300k users.</p>
 
             <ul>
-              <li>Worked in the complete development lifecycle of the application with successful launching</li>
-              <li>Researched on the security(standard encryption and decryption) of the books in the app stored in the device of an user</li>
-              <li>Working in the continuous development of the application</li>
+              <li>Worked in the complete development lifecycle of the application with successful launching, developed most of the functionality in the app</li>
+              <li>Performed research for the security(standard encryption and decryption) of how book will be stored and retrieved for a user in a device inside the app</li>
+              <li>Working in the continuous research and development of the application</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>Android Studio, Java, Kotlin, Java Native Interface, C, SQL, JavaScript, HTML, CSS
+            <strong>Tools & Languages I have used : </strong>Android Studio, Java, Kotlin, Java Native Interface, C, SQL, JavaScript, HTML, CSS, XML
 
             <h4>Get Boitoi on <a href = "https://play.google.com/store/apps/details?id=ridmik.boitoi" target="_blank" rel="noopener">Google Play</a></span></h4>
 
@@ -376,11 +377,11 @@
             <p>Boitoi is a secure native iOS eBook reader with digital library.</p>
 
             <ul>
-              <li>Worked in the complete development lifecycle of the application with successful launching</li>
-              <li>Researched on the security(standard encryption and decryption) of the books in the app stored in the device of an user</li>
+              <li>Worked for the whole development of this project from its initial development to successful launching and developed all the functionality in the app</li>
+              <li>Performed research on how encryption and decryption can be done using iOS keychain for the books inside the app stored in the device of an user</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>Xcode, Swift, Objective-C, C++, JavaScript, HTML, CSS, GRDB
+            <strong>Tools & Languages I have used : </strong>Xcode, Swift, Objective-C, C++, JavaScript, HTML, CSS, GRDB, StoryBoard
 
             <h4>Get Boitoi on <a href = "https://apps.apple.com/us/app/boitoi-bangla-ebook-reader/id1505698833" target="_blank" rel="noopener">App Store</a></span></h4>
 
@@ -394,7 +395,7 @@
             <p>Ridmik Keyboard is the most popular keyboard in Bangladesh with Bangla phonetic keyboard which has around 20 million users.</p>
 
             <ul>
-              <li>Working on the continuous development of Ridmik Keyboard</li>
+              <li>Working in the continuous development of Ridmik Keyboard</li>
             </ul>
 
             <strong>Tools & Languages I have used : </strong>Android Studio, Java, Kotlin, C
@@ -408,15 +409,15 @@
           <div class="col-12">
             <h4>Bangla Article Summarizer</h4>
 
-            <p>It is a project which gives the extractive summary of a Bangla article.</p>
+            <p>Bangla Article Summarize is a project which gives the extractive summary of a Bangla article.</p>
 
             <ul>
-              <li>Researched on making a Bangla article summarizer like other languages</li>
-              <li>Worked on preparing Bangla article summarizer based on TF-IDF(Term Frequency and Inverse Document Frequency), K-means clustering algorithm and
-                NLTK(Natural Language Toolkit) in python</li>
+              <li>Performed research on making a Bangla article summarizer</li>
+              <li>Worked on preparing Bangla article summarizer after performing research which was based on TF-IDF(Term Frequency and Inverse Document Frequency),
+                Bangla POS(Parts of Speech) tagger, K-means clustering algorithm and NLTK(Natural Language Toolkit) in python</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>Python, NLTK, Clustering Algorithm
+            <strong>Tools & Languages I have used : </strong>Python, NLTK, Clustering Algorithm, Bangla POS tagger
 
           </div>
 
