:up: update website

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                 Bangla POS(Parts of Speech) tagger, K-means clustering algorithm and NLTK(Natural Language Toolkit) in python</li>
             </ul>
 
-            <strong>Tools & Languages I have used : </strong>Python, NLTK, Clustering Algorithm, Bangla POS tagger
+            <strong>Tools & Languages I have used : </strong>Python, NLTK, Clustering Algorithm, Bangla POS Tagger
 
           </div>
 
@@ -736,10 +736,10 @@
           <div class="col-12">
             <p>
               <strong> Programming Languages : </strong>Java, Swift, Python, C, C++, Kotlin, Objective-C, Assembly(80X86)<br/>
-              <strong> Scripting Languages : </strong>JavaScript, HTML, CSS, MATLAB <br/>
+              <strong> Scripting Languages : </strong>JavaScript, HTML, CSS, MATLAB, Shell Scripts <br/>
               <strong> Mobile Application Development : </strong>Android, iOS <br/>
               <strong> Database : </strong>Oracle, SQL <br/>
-              <strong> Tools & Others : </strong>Keras, Tensorflow, NLTK, Google Map API, Google Vision API, Firebase,JNI(Java Native Interface), JavaFX <br/>
+              <strong> Tools & Others : </strong>Keras, Tensorflow, NLTK, Google Map API, Google Vision API, Firebase, JNI(Java Native Interface), JavaFX, \LaTeX <br/>
             </p>
           </div>
 
