:up: update website

--- a/index.html
+++ b/index.html
@@ -350,9 +350,9 @@
             <h4>Ridmik Labs, Dhaka, Bangladesh <br>  November 1, 2018 - Present</h4>
           </div>
 
-          <p>Projects I have worked in Ridmik Labs : </p>
-
           <div class="col-12">
+
+            <p>Projects I have worked in Ridmik Labs : </p>
 
             <h4>Boitoi Android Application</h4>
 
@@ -696,6 +696,17 @@
             <h4>Tools : Android Studio</h4>
 
             <p>It is a simple calculator app than can perform basic operations.</p>
+
+          </div>
+
+          <div class="col-12">
+            <h3>Smart Sleeping Mat</h3>
+
+            <h4>Tools : Arduino, Piezoelectric sensor</h4>
+
+            <p>It is a hardware project which can be calibrated according to user choice. User can set a time for alarm, and if user does not go out of the mat on the time of alarm,
+            alarm won't stop. This will be helpful for those who accidentally shut off alarm during sleep. For the patient who needs to sleep in one particular side, user can calibrate the
+            mat according to that, and if the user moves aside from that particular side, alarm will go on so that user can move to one's desired position again.</p>
 
           </div>
 
