:up: update website

--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
               <strong> Scripting Languages : </strong>JavaScript, HTML, CSS, MATLAB, Shell Scripts <br/>
               <strong> Mobile Application Development : </strong>Android, iOS <br/>
               <strong> Database : </strong>Oracle, SQL <br/>
-              <strong> Tools & Others : </strong>Keras, Tensorflow, NLTK, Google Map API, Google Vision API, Firebase, JNI(Java Native Interface), JavaFX, \LaTeX <br/>
+              <strong> Tools & Others : </strong>Keras, Tensorflow, NLTK, Google Map API, Google Vision API, Firebase, JNI(Java Native Interface), JavaFX, LaTeX <br/>
             </p>
           </div>
 
