:up: update website

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 
             <ul>
               <li>Performed research on making a Bangla article summarizer</li>
-              <li>Worked on preparing Bangla article summarizer after performing research which was based on TF-IDF(Term Frequency and Inverse Document Frequency),
+              <li>Worked for developing Bangla article summarizer after performing research which was based on TF-IDF(Term Frequency and Inverse Document Frequency),
                 Bangla POS(Parts of Speech) tagger, K-means clustering algorithm and NLTK(Natural Language Toolkit) in python</li>
             </ul>
 
@@ -456,7 +456,7 @@
 
             <h3>Android Stay Safe Application</h3>
 
-            <h4>Tools : Android Studio, Firebase, Google Map API, SQL, Cloud Messaging</h4>
+            <h4>Tools : Android Studio, Java, Firebase, Google Map API, SQL, Cloud Messaging</h4>
 
             <p>It is an android application which is based on the idea of smart city, crime reporting, crime alert and human security. There are
             two sides in the app: one is admin side and another one is user side.
@@ -495,7 +495,7 @@
           <div class="col-12">
             <h3>Multivariate Stock Price Prediction</h3>
 
-            <h4>Tools : Keras API, Tensorflow backend</h4>
+            <h4>Tools : Python, Keras API, Tensorflow backend</h4>
 
             <p>This is a multi-variate stock price prediction project.
               I have used keras api and tensorflow as backend.
@@ -513,7 +513,7 @@
           <div class="col-12">
             <h3>Online Examination Web</h3>
 
-            <h4>Tools : JSP Servlet, Oracle</h4>
+            <h4>Tools : Java, JSP Servlet, Oracle</h4>
 
             <p>This is a web based online examination project using Java as frontend and oracle as backend. There are two
               types of examination. Practice examination and final examination. In practice examination student can give exam at any time but on final
@@ -530,7 +530,7 @@
           <div class="col-12">
             <h3>Online Examination Desktop</h3>
 
-            <h4>Tools : JavaFx, Socket Programming</h4>
+            <h4>Tools : Java, JavaFx, Socket Programming, Files</h4>
 
             <p>This is an online examination project using java socket programming and JavaFx framework. Teachers can upload question paper from admin panel
               for his subject. Students can give MCQ exam on question uploaded by teachers and can see their marks and all previous history on every subject.
@@ -561,7 +561,7 @@
           <div class="col-12">
             <h3>Rapid Roll Android</h3>
 
-            <h4>Tools : Android Studio, Accelerometer</h4>
+            <h4>Tools : Android Studio, Java, Accelerometer, Canvas</h4>
 
             <p>This is an android rapid roll game. User can play this game using android device accelerometer, see high scores and change theme of
               gaming screen.
@@ -581,7 +581,7 @@
           <div class="col-12">
             <h3>Rapid Roll Desktop</h3>
 
-            <h4>Tools : iGraphics</h4>
+            <h4>Tools : iGraphics, C</h4>
 
             <p>This is a rapid roll game using iGraphics. User can play and see high scores.</p>
 
@@ -594,7 +594,7 @@
           <div class="col-12">
             <h3>Air Fighter Desktop</h3>
 
-            <h4>Tools : iGraphics</h4>
+            <h4>Tools : iGraphics, C</h4>
 
             <p>It is a funny air fighter game. There are multiple levels in this game and leader boards from where
               user can see high scores of his own and others.</p>
@@ -610,7 +610,7 @@
           <div class="col-12">
             <h3>Android Notebook</h3>
 
-            <h4>Tools : Android Studio</h4>
+            <h4>Tools : Android Studio, Java</h4>
 
             <p>This is an android notebook application. User can save,edit, delete one's writings in the notebook.</p>
 
@@ -628,7 +628,7 @@
           <div class="col-12">
             <h3>Android Speedometer and Location</h3>
 
-            <h4>Tools : Android Studio, Google Map Api</h4>
+            <h4>Tools : Android Studio, Java, Google Map Api</h4>
 
             <p>This is an android application from which user can see one's current velocity , current location in map and location details.</p>
 
@@ -647,7 +647,7 @@
           <div class="col-12">
             <h3>Mental Age Simulator</h3>
 
-            <h4>Tools : Android Studio</h4>
+            <h4>Tools : Android Studio, Java</h4>
 
             <p>This is an android application where there are some questions. You have to answer these questions and
               based on your answers your mental age will be simulated.</p>
@@ -666,7 +666,7 @@
           <div class="col-12">
             <h3>Android Flashlight</h3>
 
-            <h4>Tools : Android Studio</h4>
+            <h4>Tools : Android Studio, Java</h4>
 
             <p>This is an android flashlight application. You can use this as a torch light from your android device.</p>
 
@@ -683,7 +683,7 @@
           <div class="col-12">
             <h3>Quad Copter Controller from Android Device</h3>
 
-            <h4>Tools : Android Studio, Bluetooth module</h4>
+            <h4>Tools : Android Studio, Bluetooth module, Java</h4>
 
             <p>A quad copter controller using bluetooth module that can control the movement of a small quad copter.</p>
 
@@ -693,7 +693,7 @@
           <div class="col-12">
             <h3>Android Calculator</h3>
 
-            <h4>Tools : Android Studio</h4>
+            <h4>Tools : Android Studio, Java</h4>
 
             <p>It is a simple calculator app than can perform basic operations.</p>
 
@@ -702,7 +702,7 @@
           <div class="col-12">
             <h3>Smart Sleeping Mat</h3>
 
-            <h4>Tools : Arduino, Piezoelectric sensor</h4>
+            <h4>Tools : Arduino, Piezoelectric sensor, C</h4>
 
             <p>It is a hardware project which can be calibrated according to user choice. User can set a time for alarm, and if user does not go out of the mat on the time of alarm,
             alarm won't stop. This will be helpful for those who accidentally shut off alarm during sleep. For the patient who needs to sleep in one particular side, user can calibrate the
