:up: update website

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
     <h1>Biography</h1>
 
-    <p>I am currently working as a software engineer at Ridmik Labs, Dhaka, Bangladesh. I have completed my B.Sc in Computer Science and Engineering
+    <p>I am currently working as a software engineer at Ridmik Labs, Dhaka, Bangladesh. I have completed my B.Sc. in Computer Science and Engineering
       from <a href="https://www.buet.ac.bd">Bangladesh University of Engineering and Technology</a>.
       My undergraduate thesis supervisor was
       <a href="https://cse.buet.ac.bd/faculty_list/detail/mmislam">Dr. Md. Monirul Islam </a>with whom I have worked on the topic
