:up: update website

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <h1>Biography</h1>
 
     <p>I am currently working as a software engineer at Ridmik Labs, Dhaka, Bangladesh. I have completed my B.Sc. in Computer Science and Engineering
-      from <a href="https://www.buet.ac.bd">Bangladesh University of Engineering and Technology</a>.
+      from <a href="https://www.buet.ac.bd">Bangladesh University of Engineering and Technology(BUET)</a>.
       My undergraduate thesis supervisor was
       <a href="https://cse.buet.ac.bd/faculty_list/detail/mmislam">Dr. Md. Monirul Islam </a>with whom I have worked on the topic
       <strong> <span>Scene Reconstruction from Multiple Static CCTV Cameras.</span> </strong>
@@ -263,7 +263,7 @@
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
               <p class="course">B.Sc in Computer Science and Engineering, 2018</p>
-              <p class="institution">Bangladesh University of Engineering and Technology, Dhaka, Bangladesh</p>
+              <p class="institution">Bangladesh University of Engineering and Technology(BUET), Dhaka, Bangladesh</p>
             </div>
           </li>
 
