:up: update website

--- a/index.html
+++ b/index.html
@@ -436,19 +436,16 @@
       <div class="container">
 
 
-
-
-
-
-
-
-
-
-
         <div class="row">
           <div class="col-12 col-lg-4 section-heading">
 
             <h1>Projects</h1>
+
+          </div>
+
+          <div class="col-12">
+
+            <h2>Academic Projects</h2>
 
           </div>
 
