:up: update website

--- a/index.html
+++ b/index.html
@@ -445,9 +445,8 @@
 
           <div class="col-12">
 
-            <h2>Academic Projects</h2>
+            <h2>Academic Projects : </h2>
 
-          </div>
 
           <div class="col-12">
 
@@ -705,6 +704,7 @@
             alarm won't stop. This will be helpful for those who accidentally shut off alarm during sleep. For the patient who needs to sleep in one particular side, user can calibrate the
             mat according to that, and if the user moves aside from that particular side, alarm will go on so that user can move to one's desired position again.</p>
 
+          </div>
           </div>
 
 
